# flowersvalley

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: run-bot.bat  run-server.bat
src/backend/bot/app/: main.py
src/backend/bot/app/conf/: conf.py
src/backend/server/app/: main.py
src/backend/server/app/alembic/: env.py
src/backend/server/app/alembic/versions/: 83b1251e9287_create_users_table.py
src/backend/server/app/api/: __init__.py
src/backend/server/app/api/middlewares/: __init__.py  traceid.py
src/backend/server/app/api/responses/: __init__.py  test.py
src/backend/server/app/api/routes/: test.py
src/backend/server/app/conf/: conf.py
src/backend/server/app/db/: base.py  database.py
src/backend/server/app/db/models/: user.py
src/backend/server/app/services/: __init__.py  redis_service.py
src/backend/server/app/utils/: __init__.py  lifespan.py
src/backend/tests/: test_test_route.py
src/backend/utils/: __init__.py  config_loader.py  logging.py
src/frontend/: package.json  pnpm-lock.yaml
