[project]
name = "flowersvalley"
version = "0.1.0"
description = "a Telegram bot with economy && games featuring flowers. made with <3 by yxzhin ^^ using pycord, FastAPI && Next.js."
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.0",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "py-cord>=2.6.1",
    "pydantic>=2.12.0",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    "src/frontend",
    "*/alembic/*"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "E",  # pycodestyle (errors)
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade (современный синтаксис)
    "B",  # flake8-bugbear (дополнительные проверки)
    "C4", # flake8-comprehensions
    "A",  # flake8-builtins (не переопределять встроенные имена)
]
ignore = [
    "E501",
    "ANN401",
    "F403", "F405",
    "B008"
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disallow_subclassing_any = false
explicit_package_bases = true
exclude = "(frontend|alembic)"

[tool.pytest.ini_options]
addopts = "-v" #  --cov=src/backend --cov-report=html
testpaths = [
    "src/backend/tests",
]
